# inferenceONNX

./: CMakeLists.txt  inference.cpp  inference.h  main.cpp  test.cpp  torch.cpp
